# ImageColorTheme

./: .gitmodules  .pre-commit-config.yaml  README.md  settings.gradle
.github/workflows/: android.yml  codeql-analysis.yml  detekt.yml
QuantColor/: build.gradle
QuantColor/src/androidTest/java/com/mgg/quantcolor/: ExampleInstrumentedTest.kt
QuantColor/src/main/: AndroidManifest.xml
QuantColor/src/main/cpp/: CMakeLists.txt  format.sh  quantcolor.cpp
QuantColor/src/main/java/com/mgg/quantcolor/: ColorQuant.kt
QuantColor/src/test/java/com/mgg/quantcolor/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/mgg/imagecolortheme/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mgg/imagecolortheme/: MMCQ.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mgg/imagecolortheme/: ExampleUnitTest.kt
config/: maven-publish.gradle
gradle/wrapper/: gradle-wrapper.properties
